<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_para_login"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animacion_login"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/nuevohome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="cursive"
        android:text="@string/nombreapp"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="32dp"
            android:drawablePadding="10dp"
            android:hint="@string/numdocumento"
            android:minHeight="48dp"
            app:hintTextColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/userameLogin"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_seguridad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCodigoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editext_login"
                android:inputType="number|textPassword"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="72dp"
            android:background="@drawable/boton_siguiente_atras_diseno"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nocuenta"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>