<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preguntas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewHeaderBackground"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/titulopreguntas"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancelar"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/textTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textTitle" />

        <ImageButton
            android:id="@+id/play_song"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_volume_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancelar" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeaderBackground"
            app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViews"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cardpreguntas"
                    android:textColor="#9b53d3"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/layoutTarget"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViews">

                    <TextView
                        android:id="@+id/preguntastxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/cardpregunta"
                        android:textColor="#5C5959"
                        android:textSize="16sp" />
                </LinearLayout>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/circulo"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/layoutTarget"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/circulo_preguntas" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/cuadrado"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/layoutTarget"
                    app:layout_constraintStart_toStartOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/cuadrado_preguntas" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/seleccion_respuestas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cardHeader">

            <RadioGroup
                android:id="@+id/group_respuestas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/r_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="45dp"
                    android:paddingEnd="30dp"
                    android:text="@string/respuesta1"
                    android:textColor="#9b53d3"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/r_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="45dp"
                    android:gravity="center|start"
                    android:text="@string/respuesta2"
                    android:textColor="#9b53d3"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/r_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="45dp"
                    android:gravity="center|start"
                    android:text="@string/respuesta3"
                    android:textColor="#9b53d3"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/r_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="45dp"
                    android:gravity="center|start"
                    android:text="@string/respuesta4"
                    android:textColor="#9b53d3"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/r_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="45dp"
                    android:gravity="center|start"
                    android:text="@string/respuesta5"
                    android:textColor="#9b53d3"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/boton_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/boton_siguiente_atras_diseno"
            android:text="@string/itsiguiente"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/contador"
        layout="@layout/contador"
        android:visibility="gone" />

    <include
        android:id="@+id/msgAccount"
        layout="@layout/mensaje_salir_preguntas"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>