<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_registro"
    android:orientation="vertical"
    tools:context=".Contacto">

    <ImageView
        android:id="@+id/btnVolver"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/contactanos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/titulocontacto"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animacion_contacto"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contactanos"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/contacto_animacion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animacion_contacto">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/descripcioncontacto"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="32dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/asunto"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    app:startIconDrawable="@drawable/ic_carrera"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAsunto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="32dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/mensaje"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etContenido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnContactar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/boton_siguiente_atras_diseno"
                    android:onClick="enviar"
                    android:text="@string/enviar"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>